--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -7,13 +7,14 @@ disqusShortname = "" # Enable comments by entering your Disqus shortname
 
 [Author]
     name = ""
-    bio = "Some guy on the internet with opinions"
-    avatar = "images/avatar.jpg"
+    #bio = "Some guy on the internet with opinions"
+    #avatar = "images/avatar.jpg"
 
 [Params]
     bulma_theme = "lux" # bulmaswatch theme - see https://jenil.github.io/bulmaswatch/
     subtitle = "Look, monkeys!" # Subtitle of your site
-    postSections = ["blog"] # Name sections here that you want to show up on the front page and in the recent articles widget
+    post_sections = ["blog"] # Name sections here that you want to show up on the front page and in the recent articles widget
+    post_navigation = true
     #description = "Opinions from a code monkey" # Description of your site
     #authorbox = true
 
