--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -1,14 +1,14 @@
 baseurl = "https://example.com/"
 title = "Some Website!"
 languageCode = "en-gb"
-paginate = "10" # Number of posts per page
+paginate = "3" # Number of posts per page
 theme = "menhir"
 disqusShortname = "" # Enable comments by entering your Disqus shortname
 
 [Author]
-    name = ""
-    #bio = "Some guy on the internet with opinions"
-    #avatar = "images/avatar.jpg"
+    name = "Joe Bloggs"
+    bio = "Some dude called Joe Bloggs"
+    avatar = "images/avatar.jpg"
 
 [Params]
     bulma_theme = "lux" # bulmaswatch theme - see https://jenil.github.io/bulmaswatch/
@@ -16,7 +16,7 @@ disqusShortname = "" # Enable comments by entering your Disqus shortname
     post_sections = ["blog"] # Name sections here that you want to show up on the front page and in the recent articles widget
     post_navigation = true
     #description = "Opinions from a code monkey" # Description of your site
-    #authorbox = true
+    author_box = true
 
 [Params.widgets]
     social = true # Enable social media links
