updated readme and example config

--- a/exampleSite/config.toml
+++ b/exampleSite/config.toml
@@ -14,8 +14,7 @@ disqusShortname = "" # Enable comments by entering your Disqus shortname
     bulma_theme = "lux" # bulmaswatch theme - see https://jenil.github.io/bulmaswatch/
     subtitle = "Look, monkeys!" # Subtitle of your site
     post_sections = ["blog"] # Name sections here that you want to show up on the front page and in the recent articles widget
-    post_navigation = true
-    #description = "Opinions from a code monkey" # Description of your site
+    post_navigation = true # set to false to disable category based navigation links on article pages
     author_box = true
     custom_css = []
     custom_js = []
